--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "NodeNext",
     "rootDir": "./src",
     "outDir": "./dist",
-    "strict": true
+    "strict": true,
+    "noEmitOnError": true
   },
-
   "include": ["src"]
 }
